logo & favicon fixed

--- a/hike-quest-app/index.html
+++ b/hike-quest-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn.discordapp.com/attachments/1260151938750742622/1272199714909065216/9_-removebg-preview_3.png?ex=66bb6d50&is=66ba1bd0&hm=98f03080f4a466d39920b2a41d292a189aa68e9e797dcfaa9ea3f117522693cb&" />
+    <link rel="icon" type="image/svg+xml" href="https://imagizer.imageshack.com/v2/1600x1200q70/922/xwgsR4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hike Quest</title>
   </head>
